# ChronoSpace

./: .gitignore  README.md
chrono-binaries/: Cargo.toml
chrono-client/: Cargo.toml  index.html
chrono-client/crates/components/: Cargo.toml
chrono-client/crates/components/src/: community_list.rs  friend_list.rs  game_time.rs  group.rs  group_member_list.rs  lib.rs  sign_login.rs  title_bar.rs
chrono-client/crates/components/src/chat/: chat_list.rs  chat_window.rs  mod.rs  textarea.rs
chrono-client/crates/configs/src/: lib.rs
chrono-client/crates/data_types/src/: chat_list.rs  chat_send.rs  lib.rs  signup_login.rs  verification_code.rs
chrono-client/crates/data_types/src/friend/: mod.rs
chrono-client/crates/storage/: Cargo.toml
chrono-client/crates/storage/src/: lib.rs
chrono-client/crates/ui_error/: Cargo.toml
chrono-client/crates/views/: Cargo.toml
chrono-client/crates/views/src/: empty.rs  friend_list.rs  home.rs  lib.rs  sign_login.rs  theme.rs
chrono-client/crates/wasm_http/: Cargo.toml
chrono-client/crates/wasm_http/src/: http_ctx.rs
chrono-client/src/: app.rs
chrono-client/src-tauri/: Cargo.toml  tauri.conf.json
chrono-client/src-tauri/src/: main.rs
chrono-client/statics/css/: chat-window.css  community_list.css  friend_list.css  global.css  group_member_list.css  home.css  sign_login.css
chrono-space-client/: Cargo.toml  index.html
chrono-space-client/crates/components/src/: game_time.rs
chrono-space-client/crates/data_types/: Cargo.toml
chrono-space-client/crates/data_types/src/friend/: friend_add.rs  friend_list.rs  mod.rs
chrono-space-client/crates/macros/src/: if_let.rs
chrono-space-client/crates/ui_error/src/: error.rs
chrono-space-client/crates/views/src/: theme.rs
chrono-space-client/src-tauri/: Cargo.toml
chrono-space-client/statics/css/: global.css
