[package]
name = "chrono-client-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
futures.workspace = true
gloo-net.workspace = true
views.workspace = true
any_spawner.workspace = true
storage.workspace = true



[workspace]
members = ["src-tauri", "crates/*"]

[workspace.dependencies]
leptos = "0.6.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
time = "0.3.36"
serde_json = "1.0.117"
gloo-net = "0.5.0"
thiserror = "1.0.61"
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
once_cell = "1.19.0"
futures = "0.3.30"
futures-util = "0.3.30"
any_spawner = "0.1.0"
chrono = "0.4.38"
web-sys = "0.3.69"

storage = { path = "crates/storage" }
components = { path = "crates/components" }
data_types = { path = "crates/data_types" }
macros = { path = "crates/macros" }
wasm_http = { path = "crates/wasm_http" }
error = { path = "crates/error" }
views = { path = "crates/views" }
configs = { path = "crates/configs" }