[package]
name = "chrono-space-client-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
futures.workspace = true
futures-util.workspace = true
gloo-net.workspace = true
views.workspace = true

[workspace]
members = ["src-tauri", "crates/*"]

[workspace.dependencies]
leptos = "0.7.0-preview2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
time = "0.3.36"
serde_json = "1.0.117"
gloo-net = "0.5.0"
thiserror = "1.0.61"
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
once_cell = "1.19.0"
futures = "0.3.30"
futures-util = "0.3.30"
leptos_reactive = "0.7.0-preview2"

components = { path = "crates/components" }
data_types = { path = "crates/data_types" }
macros = { path = "crates/macros" }
wasm_http = { path = "crates/wasm_http" }
ui_error = { path = "crates/ui_error" }
views = { path = "crates/views" }