[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
gloo-timers.workspace = true
gloo-console.workspace = true
time = { workspace = true, features = ["wasm-bindgen"]}
data_types.workspace = true
wasm_http.workspace = true
macros.workspace = true
chrono = { workspace = true, features = ["wasmbind"] }
serde = { workspace = true, features = ["derive"] }
configs.workspace = true