[package]
name = "views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
wasm_http.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
gloo-console.workspace = true
gloo-utils = {workspace = true, features = ["serde"] }
gloo-storage.workspace = true
gloo-net.workspace = true
components.workspace = true
once_cell.workspace = true
macros.workspace = true
futures.workspace = true
wasm-bindgen-futures.workspace = true
futures-util.workspace = true
data_types.workspace = true
leptos_reactive.workspace = true
